--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,6 @@
 @import url('demo.css');
 @import url('font-awesome.css');
 
-/* GLOBALS */
-
-*,
-*:after,
-*:before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    -o-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-
 .clearfix:after {
     content: "";
     display: table;
@@ -22,41 +8,36 @@
 }
 
 .form-3 {
-    font-family: 'Ubuntu', 'Lato', sans-serif;
-    font-weight: 400;
-    /* Size and position */
-    width: 300px;
-    position: relative;
-    margin: 60px auto 30px;
-    padding: 10px;
-    overflow: hidden;
-
-    /* Styles */
     background: url(https://itspixelperfectblog.files.wordpress.com/2013/07/twitter-logo.jpeg); 
+    background-size: contain;
     background-repeat: no-repeat;
-    border-radius: 0.4em;
+    background-color: #fff;
     border: 1px solid #191919;
+    border-radius: 0.4em;
     box-shadow: inset 0 0 2px 1px rgba(255,255,255,0.08),
     0 16px 10px -8px rgba(0, 0, 0, 0.6);
+    margin: 60px auto;
+    position: relative;
     width: 50%;
-    height: 48vh;
+    height: 50vh;
+    object-fit: cover;
+    padding-left: 2em;
 }
+
 .form-3 input[type=text],
 .form-3 input[type=password] {
     /* Size and position */
     width: auto;
+    height: 1.1Aem;
     padding: 8px 5px;
-    margin-bottom: 10px;
-    font-size: 1.3em;
-
-    /* Styles */
+    font-size: 1.5em;
     background: transparent;
     border: none;
     border-bottom: 1px solid #000;
     border-radius: 3px;
-
-    /* Font styles */
     font-family: 'Ubuntu', 'Lato', sans-serif;
+    margin: 2px;
+    padding: 0;
 }
 
 .form-3 input[type=text]:focus, 
@@ -108,10 +89,34 @@
     border-color: rgba(0,0,0,0.9);
 }
 
-.no-boxshadow .form-3 input[type=submit]:hover {
-    background: #2a92d8;
+
+.form-4 {
+    background: url(../images/bg-waves4.png); 
+    background-repeat: no-repeat;
+    border: 1px solid #191919;
+    border-radius: 0.4em;
+    box-shadow: inset 0 0 2px 1px rgba(255,255,255,0.08),
+    0 16px 10px -8px rgba(0, 0, 0, 0.6);
+    margin: 60px auto;
+    padding: 10px;
+    width: 50%;
+    max-width: 50%
+    max-height50vh;
+    height: 50vh;
+    object-fit: cover;
+    padding: 6em;
 }
 
-.no-pointerevents .form-3 p:nth-child(1):before {
-    display: none;
+input[type=text], textarea {
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    font-size: 2.4em;
+    max-width: 13em;
+    max-height: 10em;
+}
+
+.input-container {
+    float: right;
+    margin: auto;
 }
